<resources>
    <string name="app_name">Fundoo Notes</string>
    <string name="Email">email_edit_text</string>
    <string name="password">password_edit_text</string>
    <string name="user_login">login_button</string>
    <string name="login_button">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="input_password">Password</string>
    <string name="login_with_social_libraries">OR Login With</string>
    <string name="registration_button">Not Registered? Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_first_name">FirstName</string>
    <string name="user_last_name">LastName</string>
    <string name="user_phone_number">PhoneNumber</string>
    <string name="user_email_address">Email</string>
    <string name="user_date_of_birth">DateOfBirth</string>
    <string name="user_registration">SignUp</string>
    <string name="user_registration_page">User Registration</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">ConfirmPassword</string>
    <string name="sign_out">SignOut</string>
    <string name="title_activity_home_dash_board">HomeDashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fundoo Notes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">description</string>
    <string name="text_view_title">Title</string>
    <string name="text_view_description">description</string>
    <string name="button_save_note">Save</string>
    <string name="add_note">AddNote</string>
    <string name="user_info">UserProfile</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="hint_password">New Password</string>
    <string name="new_password_submit_button">Submit</string>
    <string name="back_to_home">BackHome</string>
    <string name="sign_out_alert_message">Do you want to sign out ?</string>
    <string name="toast_when_note_menu_tapped">Note Tapped</string>
    <string name="sign_out_alert_title">ALERT!</string>
    <string name="sign_out_alert_positive_button">Yes</string>
    <string name="toast_when_sign_out_alert_positive_button_clicked">Signing Out</string>
    <string name="sign_out_alerst_negative_button">NO</string>
    <string name="tast_when_user_profile_clicked">Clicked User Info</string>
    <string name="emptyEmail">email cannot be empty</string>
    <string name="emailTooLong">email length is too long</string>
    <string name="emptyPassword">password cannot be empty</string>
    <string name="shortPasswordLength">password length too short</string>
    <string name="validPasswordLength">valid password length</string>
    <string name="toast_email_not_registered">Not Registered. First Register and then try to login</string>
    <string name="toast_login_unsuccessful">Login Unsuccessful</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="toast_login_successful">Login Successful</string>
    <string name="delete_notes">Delete</string>
    <string name="archive_note">Archive</string>
    <string name="add_lable">Add Label</string>
    <string name="add_colour">Add Colour</string>
    <string name="add_remainder">Add Remainder</string>
    <string name="menu_notes">Notes</string>
    <string name="title_notes">Notes</string>
    <string name="grid_view">GridView</string>
    <string name="list_view">ListView</string>
    <string name="switch_view">SwitchView</string>
    <string name="note">Note</string>
    <string name="copy_notes">Make a copy</string>
    <string name="send_notes">Send</string>
    <string name="add_label">Add label</string>
    <string name="change_colour">Change colour</string>
    <string name="add_reminder">Add reminder</string>
    <string name="pin_button">Pin button</string>
    <string name="create_new_label">Create new label</string>
    <string name="search_note">Search notes</string>
    <string name="reminders">Reminders</string>
    <string name="search_hint">Search your note</string>
    <string name="new_photo_note">New photo note</string>
    <string name="new_voice_note">New voice note</string>
    <string name="new_drawing_note">New drawing note</string>
    <string name="new_list">New list</string>
    <string name="bundle_note_id">noteId</string>
    <string name="bundle_note_is_archived">noteIsArchived</string>
    <string name="bundle_note_is_deleted">noteIsDeleted</string>
    <string name="bundle_note_is_pined">noteIsPinned</string>
    <string name="bundle_note_label">noteLabel</string>
    <string name="bundle_note_reminder">noteReminder</string>
    <string name="bundle_note_position">notePosition</string>
    <string name="bundle_note_colour">noteColour</string>
    <string name="toast_discard_empty_note">Empty note discarded</string>
    <string name="toast_archive_notes_ckick">Archive Notes</string>
    <string name="toast_when_Delete_menu_clicked">Deleted Notes</string>
    <string name="app_bar_title_archive_notes">Archive</string>
    <string name="edit_labels">Edit labels</string>
    <string name="alert_title_for_delete_label">Delete label?</string>
    <string name="alert_message_for_delete_label">label will be deleted from all notes</string>
    <string name="alert_positive_button_for_delete_label">Delete</string>
    <string name="toast_label_deleted">Label deleted</string>
    <string name="alert_negative_button_for_delete_label">Cancel</string>
    <string name="dialog_reminder_title">Add reminder</string>
    <string name="cancel_reminder">Cancel</string>
    <string name="save_reminder">Save</string>
    <string name="hint_enter_time">Enter time</string>
    <string name="hint_enter_date">Enter date</string>
    <string name="reminder_date_format">dd/MM/yyyy</string>
    <string name="archive_note_snackbar_message">Archiving note</string>
    <string name="archive_note_sanckbar_action">UNDO</string>
    <string name="delete_note_snackbar_message">Note Moved to Bin</string>
    <string name="pin_note_snackbar_message">Pinning note</string>
    <string name="notification_channel_id">channel_note_id_123</string>
    <string name="notification_channel_name">channel_name_note</string>
    <string name="facebook_login">Sign In using facebook</string>
    <string name="user_name">Full name</string>
    <!--    FaceBook app id and protocol scheme string values-->
    <string name="facebook_app_id">1714124398727546</string>
    <string name="fb_login_protocol_scheme">fb1714124398727546</string>
    <string name="authenticated_user">Authenticated User</string>
    <string name="app_bar_title_reminder_notes">Reminders</string>
    <string name="note_colour">Note Colour</string>
    <string name="important">Important</string>
</resources>
