<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/archive_note"
        android:title="@string/archive_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_note"
        android:title="@string/delete_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_note"
        android:title="@string/copy_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_note"
        android:title="@string/send_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/pinned_note"
        android:title="@string/pin_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_reminder"
        android:icon="@drawable/ic_add_alert_white"
        android:title="@string/add_reminder"
        app:showAsAction="always" />
    <item
        android:id="@+id/change_colour"
        android:icon="@drawable/ic_colour_palette"
        android:title="@string/change_colour"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_label"
        android:icon="@drawable/ic_label_outline_white"
        android:title="@string/add_label"
        app:showAsAction="always" />

</menu>