<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_note_delete_note"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_note_copy_note"
        android:icon="@drawable/ic_make_copy_grey"
        android:title="@string/copy_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_note_add_label"
        android:icon="@drawable/ic_label_outline_grey"
        android:title="@string/add_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_note_change_colour"
        android:icon="@drawable/ic_colour_palette_grey"
        android:title="@string/change_colour"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_note_menu_pin_button"
        android:icon="@drawable/radio_btton_pin"
        android:title="@string/pin_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_note_menu_reminder"
        android:icon="@drawable/ic_add_alert_grey"
        android:title="@string/add_remainder"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_note_menu_archive_note"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_note"
        app:showAsAction="always" />
</menu>