<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_note"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_note"
        android:icon="@drawable/ic_make_copy_grey"
        android:title="@string/copy_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_label"
        android:icon="@drawable/ic_label_outline_grey"
        android:title="@string/add_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_colour"
        android:icon="@drawable/ic_colour_palette_grey"
        android:title="@string/change_colour"
        app:showAsAction="never" />
</menu>