<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_app_bar_photo_note"
        android:icon="@drawable/ic_image_grey"
        android:title="@string/new_photo_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_app_bar_audio_note"
        android:icon="@drawable/ic_voice_grey"
        android:title="@string/new_voice_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_app_bar_drawing_note"
        android:icon="@drawable/ic_brush_grey"
        android:title="@string/new_drawing_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_app_bar_list"
        android:icon="@drawable/ic_check_box_grey"
        android:title="@string/new_list"
        app:showAsAction="always" />
</menu>