<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".note_module.note_page.view.ReminderDialogFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:focusable="false"
        android:hint="@string/hint_enter_date"
        app:layout_constraintBottom_toTopOf="@+id/time_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/time_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:focusable="false"
        android:hint="@string/hint_enter_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_edit_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_save_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save_reminder"
        android:textColor="@color/PrimaryText"
        app:backgroundTint="@color/AccentColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_reminder"
        app:layout_constraintTop_toBottomOf="@+id/time_edit_text"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_cancel_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_reminder"
        android:textColor="@color/PrimaryText"
        app:backgroundTint="@color/colorPrimaryWhite"
        app:layout_constraintBottom_toBottomOf="@+id/button_save_reminder"
        app:layout_constraintEnd_toStartOf="@+id/button_save_reminder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_edit_text"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>