<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constaint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".user_module.view.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:animateLayoutChanges="true"
            android:filterTouchesWhenObscured="true"
            android:focusableInTouchMode="true"
            app:boxBackgroundColor="@color/colorPrimaryWhite"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/email_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/text_12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:animateLayoutChanges="true"
            android:filterTouchesWhenObscured="true"
            android:focusableInTouchMode="true"
            app:boxBackgroundColor="@color/colorPrimaryWhite"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
            app:layout_constraintVertical_chainStyle="packed"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/passwor_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/text_12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:text="@string/login_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/button_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_other_login_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="@string/login_with_social_libraries"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_register"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="@string/registration_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/text_other_login_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_forgot_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/AccentColor"
            app:backgroundTint="@color/colorPrimaryWhite"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@+id/facebook_sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_other_login_option"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:drawableStart="@drawable/facebook_icon"
            android:drawableLeft="@drawable/facebook_icon"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>